Slight improvement to Customers UI/general UI, now has links to customers, products, locations, multicast groups at top of all pages, link to multicast groups from products form, and tables no longer overlap in customer update entitlements.

--- a/ui/src/styles.css
+++ b/ui/src/styles.css
@@ -98,14 +98,28 @@ input[type=datetime-local]::-webkit-inner-spin-button {
 .centered {
     margin: auto;
 }
+.centered-content, td.centered-content:not(th) {
+    text-align: center;
+}
 button.new-entry {
     font-size: 115%;
 }
+
 .link {
     color: blue;
     text-decoration: underline;
     cursor: pointer;
 }
+.nice-link {
+    color: #337ab7;
+    text-decoration: none;
+    cursor: pointer;
+}
+.nice-link:hover {
+    color: #23527c;
+    text-decoration: underline;
+}
+
 .full-width {
     width: 100%;
 }
